--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.10)
 project(leetcode)
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(leetcode DailyTemperatures_739/main.cpp)
+add_executable(leetcode TwoSum_1/main.cpp)
